RESOLVED FIXED Bug 97587
[Qt] Fix the LLInt build on Mac
https://bugs.webkit.org/show_bug.cgi?id=97587
Summary [Qt] Fix the LLInt build on Mac
Csaba Osztrogonác
Reported 2012-09-25 11:49:17 PDT
Attachments
Patch (4.60 KB, patch)
2012-11-26 08:46 PST, Zeno Albisser
no flags
Simon Hausmann
Comment 1 2012-10-26 07:13:21 PDT
The error is: Compiling /Users/torarne/dev/webkit/wip/Source/JavaScriptCore/profiler/ProfileGenerator.cpp In file included from /Users/torarne/dev/webkit/wip/Source/JavaScriptCore/llint/LowLevelInterpreter.cpp:465: generated/LLIntAssembly.h:15:13: error: expected ')' "\tjs " LOCAL_LABEL_STRING(_offlineasm_prologue__continue) "\n" ^ generated/LLIntAssembly.h:3:1: note: to match this '(' OFFLINE_ASM_BEGIN ^ /Users/torarne/dev/webkit/wip/Source/JavaScriptCore/llint/LowLevelInterpreter.cpp:441:33: note: expanded from macro 'OFFLINE_ASM_BEGIN' #define OFFLINE_ASM_BEGIN asm ( ^ 1 error generated. make[4]: *** [obj/debug/llint/LowLevelInterpreter.o] Error 1 and I think the fix is probably: diff --git a/Source/WTF/wtf/InlineASM.h b/Source/WTF/wtf/InlineASM.h index 37069a7..0a2fe78 100644 --- a/Source/WTF/wtf/InlineASM.h +++ b/Source/WTF/wtf/InlineASM.h @@ -77,7 +77,7 @@ // FIXME: figure out how this works on all the platforms. I know that // on ELF, the preferred form is ".Lstuff" as opposed to "Lstuff". // Don't know about any of the others. -#if PLATFORM(MAC) +#if OS(DARWIN) #define LOCAL_LABEL_STRING(name) "L" #name #elif OS(LINUX) \ || OS(FREEBSD) \
Simon Hausmann
Comment 2 2012-11-26 06:50:56 PST
Tor Arne or Zeno: Could you of you guys try the patch on a Mac, when you have time? This should be a straight-forward fix :)
Zeno Albisser
Comment 3 2012-11-26 06:57:09 PST
(In reply to comment #2) > Tor Arne or Zeno: Could you of you guys try the patch on a Mac, when you have time? This should be a straight-forward fix :) I'll give it a try.
Zeno Albisser
Comment 4 2012-11-26 08:46:51 PST
Simon Hausmann
Comment 5 2012-11-26 12:27:59 PST
Comment on attachment 176010 [details] Patch Thanks Zeno!
Zeno Albisser
Comment 6 2012-11-26 14:46:11 PST
Comment on attachment 176010 [details] Patch Clearing flags on attachment: 176010 Committed r135770: <http://trac.webkit.org/changeset/135770>
Zeno Albisser
Comment 7 2012-11-26 14:46:17 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.