[Qt] Fix the LLInt build on Mac https://bugs.webkit.org/show_bug.cgi?id=97587

Reviewed by Simon Hausmann.

Source/JavaScriptCore:

* DerivedSources.pri:
* JavaScriptCore.pro:

Source/WTF:

* wtf/InlineASM.h:
    Use OS(DARWIN) instead of PLATFORM(MAC),
    in order to allow Qt to use the same code.
* wtf/Platform.h:

Canonical link: https://commits.webkit.org/121426@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135770 268f45cc-cd09-0410-ab3c-d52691b4dbfc