Source/JavaScriptCore/DerivedSources.pri
@@ -102,15 +102,13 @@ for(dir, DIRS) {
     exists($$file): LLINT_FILES += $$file
 }
 
-if(linux-*|win32) {
-    #GENERATOR: LLInt
-    llint.output = ${QMAKE_FILE_IN_PATH}$${QMAKE_DIR_SEP}LLIntAssembly.h
-    llint.script = $$PWD/offlineasm/asm.rb
-    llint.input = LLINT_FILES
-    llint.depends = $$LLINT_DEPENDENCY
-    llint.commands = ruby $$llint.script $$LLINT_ASSEMBLER ${QMAKE_FILE_IN} ${QMAKE_FILE_OUT}
-    GENERATORS += llint
-}
+#GENERATOR: LLInt
+llint.output = ${QMAKE_FILE_IN_PATH}$${QMAKE_DIR_SEP}LLIntAssembly.h
+llint.script = $$PWD/offlineasm/asm.rb
+llint.input = LLINT_FILES
+llint.depends = $$LLINT_DEPENDENCY
+llint.commands = ruby $$llint.script $$LLINT_ASSEMBLER ${QMAKE_FILE_IN} ${QMAKE_FILE_OUT}
+GENERATORS += llint
 
 linux-*:if(isEqual(QT_ARCH, "i386")|isEqual(QT_ARCH, "x86_64")) {
     # GENERATOR: disassembler
