Source/JavaScriptCore/JavaScriptCore.pro
@@ -7,18 +7,16 @@
 TEMPLATE = subdirs
 CONFIG += ordered
 
-if(linux-*|win32*) {
-    LLIntOffsetsExtractor.file = LLIntOffsetsExtractor.pro
-    LLIntOffsetsExtractor.makefile = Makefile.LLIntOffsetsExtractor
-    SUBDIRS += LLIntOffsetsExtractor
-}
+LLIntOffsetsExtractor.file = LLIntOffsetsExtractor.pro
+LLIntOffsetsExtractor.makefile = Makefile.LLIntOffsetsExtractor
+SUBDIRS += LLIntOffsetsExtractor
 
 derived_sources.file = DerivedSources.pri
 target.file = Target.pri
 
 SUBDIRS += derived_sources target
 
-if(linux-*|win32*):addStrictSubdirOrderBetween(LLIntOffsetsExtractor, derived_sources)
+addStrictSubdirOrderBetween(LLIntOffsetsExtractor, derived_sources)
 addStrictSubdirOrderBetween(derived_sources, target)
 
 jsc.file = jsc.pro
